--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,21 @@
     font-family: sans-serif;
     text-align: center;
   }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    margin: 0;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  }
+  .banner {
+    margin-top: 5px;
+    height: 500px;
+    background: #656964 url(./assets/banner.jpg) no-repeat center center/cover;
+  }
   
